# openfang

./: Cargo.toml  SQ-INTEGRATION-PROGRESS.md  SQ-INTEGRATION.md
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: kernel.rs  lib.rs  sq_daemon.rs
crates/openfang-memory/: Cargo.toml  SQ-INTEGRATION-PLAN.md
crates/openfang-memory/src/: lib.rs
crates/openfang-memory/src/backend/: coord_mapper.rs  mod.rs  sq_daemon.rs  sqlite.rs
crates/openfang-memory/src/sq/: client.rs  coordinate.rs  federation.rs  mod.rs  protocol.rs  store.rs  tests.rs
crates/openfang-sq/: Cargo.toml
crates/openfang-sq/src/: client.rs  coordinate.rs  error.rs  lib.rs  store.rs
crates/openfang-types/src/: config.rs
