[package]
name = "openfang-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory substrate for the OpenFang Agent OS"

[dependencies]
openfang-types = { path = "../openfang-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

# SQ backend integration (experimental)
# sq-client = { version = "0.5", optional = true }
# TODO: Add actual SQ client dependency when available

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
sq-backend = []  # Enable SQ daemon backend (experimental)
